# agent42

./: .dockerignore  .env.example  .env.paperclip.example  .gitattributes  .gitignore  .mcp.available.json  .mcp.json  .mcp.json.example  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  REVIEW-nanobot-comparison.md  ROADMAP.md  SECURITY_REVIEW.md  agent42-disable-proxy.bat  agent42-env.bat  agent42-proxy.ps1  agent42-service.xml  agent42.py  check_node.ps1  commands.py  docker-compose.n8n.yml  docker-compose.yml  email_monitor_state.json  frood.py  frood_err.txt  frood_out.txt  install-agent42-service.bat  install-agent42-service.ps1  mcp_server.py  migrate.py  opencode.json  plan.md  pyproject.toml  requirements-dev.txt  requirements.txt  (+10 more)
.claude/: learned-patterns.json  lessons.md  settings.json
.frood/: settings.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
agents/: agent.py  agent_routing_store.py  extension_loader.py  iteration_engine.py  learner.py  model_catalog.py  model_evaluator.py  model_researcher.py  model_router.py  profile_loader.py
apps/: apps.json
channels/: base.py  discord_channel.py  email_channel.py  manager.py  slack_channel.py  telegram_channel.py
core/: agent_manager.py  agent_runtime.py  app_manager.py  approval_gate.py  capacity.py  chat_session_manager.py  command_filter.py  complexity.py  config.py  device_auth.py  form_submitter.py  github_accounts.py  github_oauth.py  heartbeat.py  intent_classifier.py  interview_questions.py  key_store.py  memory_bridge.py  model_classifier.py  notification_service.py  plan_spec.py  portability.py  project_manager.py  project_spec.py  queue_backend.py  rate_limiter.py  repo_manager.py  reward_system.py  rlm_config.py  sandbox.py  security_scanner.py  sidecar_logging.py  sidecar_models.py  (+7 more)
(+549 files in other folders)
